# code-jam-10

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: processing.py  website.py
src/assets/: base.html  decode.html  display.html  encode.html  globals.css  index.html
src/static/: globals.css
src/templates/: alpha.html  base.html  decode.html  display.html  encode.html  encode_a.html  encode_rgb.html  index.html  rgb.html
