[tool.poetry]
name = "code-jam-10"
version = "0.1.0"
description = "Submission to Python Discord's 10th Code Jam"
authors = ["Kronifer <44979306+Kronifer@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
taskipy = "^1.12.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
flake8-docstrings = "^1.7.0"

[tool.taskipy.tasks]
format = "black . && isort ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
