[tool.poetry]
name = "code-jam-10"
version = "0.1.0"
description = "Submission to Python Discord's 10th Code Jam"
authors = ["Kronifer <44979306+Kronifer@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.0.0"
flask = "^2.3.3"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
taskipy = "^1.12.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
flake8-docstrings = "^1.7.0"
gunicorn = "^21.2.0"
waitress = "^2.1.2"

[tool.taskipy.tasks]
format = "black . && isort ."

[tool.black]
line-length = 119
target-version = ["py310", "py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
